# zstd-patch

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  common.h  file.c  file.h  main.c  patch.c  patch.h
